# web-scraping-engine

./: .gitignore  .stylish-haskell.yaml  README.md  _default.nix  _shell.nix  haskell-packages.nix  nixpkgs-version.nix
example/: build-proxies.sh  default.nix  example.cabal  shell.nix  user-agents.txt
example/src/: Main.hs  ScrapingRules.hs  ScrapingUtils.hs
lib/: LICENSE  shell.nix  stack.yaml  web-scraping-engine.cabal
lib/src/: ScrapeEngine.hs
lib/src/ScrapeEngine/: Collect.hs  CsvOut.hs  FetchUrl.hs  Main.hs  Prelude.hs  TorProxies.hs
