name:                example
version:             0.1.0.0
synopsis:            Example web scraper using scalpel and web-scraping-engine
description:         Please see README.md
homepage:            https://github.com/grafted-in/web-scraping-engine
license:             BSD3
license-file:        LICENSE
author:              Elliot Cameron
maintainer:          elliot@graftedin.io
copyright:           2017 Elliot Cameron and Grafted-In, LLC
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable example
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       ScrapingRules
  ghc-options:         -O2 -Wall -threaded -rtsopts -with-rtsopts=-N -with-rtsopts=-T
  build-depends:
      base
    , cassava
    , containers
    , ekg
    , scalpel-core
    , text
    , unordered-containers
    , web-scraping-engine
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DuplicateRecordFields
    FlexibleContexts
    LambdaCase
    NamedFieldPuns
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/grafted-in/web-scraping-engine.git
